<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_male"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_regular"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/string_male"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view_male"
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="@color/view_grey"
        app:layout_constraintTop_toBottomOf="@+id/tv_male" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_female"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/roboto_regular"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/string_female"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/view_male" />

    <View
        android:id="@+id/view_female"
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="@color/view_grey"
        app:layout_constraintTop_toBottomOf="@+id/tv_female" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_others"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/roboto_regular"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/string_others"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/view_female" />

</androidx.constraintlayout.widget.ConstraintLayout>