<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.login.view.LoginActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tool_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="20dp"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:src="@drawable/ic_logo"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@+id/tool_bar" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/str_welcome_to_gps_chat"
        android:textColor="@color/black"
        android:textSize="@dimen/dimen_title_txt_size"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@+id/iv_logo" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_title_desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/str_login_desc"
        android:textColor="@color/grey"
        android:textSize="@dimen/dimen_txt_size_medium"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@+id/tv_title" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_user_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:theme="@style/TextLabel"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_desc"
        tools:ignore="NestedWeights">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:fontFamily="@font/roboto_regular"
            android:gravity="bottom"
            android:hint="@string/hint_user_name"
            android:inputType="text"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            android:textSize="@dimen/dimen_txt_size" />

    </com.google.android.material.textfield.TextInputLayout>

    <View
        android:id="@+id/view_name"
        android:layout_width="0dp"
        android:layout_height="0.1dp"
        android:background="@color/view_grey"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@+id/layout_user_name" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:theme="@style/TextLabel"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@+id/view_name"
        app:passwordToggleEnabled="true"
        tools:ignore="NestedWeights">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:fontFamily="@font/roboto_regular"
            android:gravity="bottom"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            android:textSize="@dimen/dimen_txt_size" />

    </com.google.android.material.textfield.TextInputLayout>

    <View
        android:id="@+id/view_password"
        android:layout_width="0dp"
        android:layout_height="0.1dp"
        android:background="@color/view_grey"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@+id/layout_password" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:padding="5dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/string_forgot_password"
        android:textColor="@color/black"
        android:textSize="@dimen/dimen_txt_size_16"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@+id/view_password" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/button_background"
        android:fontFamily="@font/roboto_bold"
        android:gravity="center"
        android:paddingStart="32dp"
        android:paddingTop="9dp"
        android:paddingEnd="32dp"
        android:paddingBottom="9dp"
        android:text="@string/hint_login"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintTop_toBottomOf="@+id/view_password" />

</androidx.constraintlayout.widget.ConstraintLayout>