<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.forgotpassword.view.ForgotPasswordActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tool_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tool_bar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/string_forgot_pwd"
                android:textColor="@color/black"
                android:textSize="26sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:theme="@style/TextLabel"
                tools:ignore="NestedWeights">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_user_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:fontFamily="@font/roboto_regular"
                    android:gravity="bottom"
                    android:hint="@string/hint_user_name"
                    android:inputType="text"
                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/grey"
                    android:textSize="18sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/view_grey" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:theme="@style/TextLabel"
                tools:ignore="NestedWeights">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_passport_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:fontFamily="@font/roboto_regular"
                    android:hint="@string/hint_passport_number"
                    android:inputType="textCapCharacters"
                    android:paddingTop="10dp"
                    android:textColor="@color/greyish_brown"
                    android:textColorHint="@color/warm_grey"
                    android:textSize="18sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="3dp"
                android:background="@color/view_grey" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/roboto_regular"
                android:letterSpacing="0.02"
                android:lineSpacingExtra="4sp"
                android:text="@string/string_upload_passport_or_id"
                android:textColor="@color/warm_grey"
                android:textSize="14sp" />

            <RelativeLayout
                android:id="@+id/layout_passport_id"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_toolbar_height"
                android:layout_marginTop="11dp"
                android:background="@drawable/background_pinkish_grey"
                android:gravity="center"
                android:text="@string/string_upload_passport_or_id">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv_upload"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/ic_upload" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/iv_upload"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/roboto_regular"
                    android:letterSpacing="0.02"
                    android:lineSpacingExtra="3sp"
                    android:text="@string/string_use_camera_or_select_from_gallery"
                    android:textColor="@color/warm_grey"
                    android:textSize="12sp" />

            </RelativeLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_passport_id"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_toolbar_height"
                android:visibility="gone"
                app:cardCornerRadius="5dp"
                app:cardElevation="2dp"
                app:cardUseCompatPadding="true">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv_passport_id"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop" />

            </androidx.cardview.widget.CardView>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="40dp"
                android:background="@drawable/button_background"
                android:fontFamily="@font/roboto_bold"
                android:gravity="center"
                android:paddingStart="20dp"
                android:paddingTop="9dp"
                android:paddingEnd="20dp"
                android:paddingBottom="9dp"
                android:text="@string/str_next"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>